@@ -1,3 +1,9 @@
+2007-07-31  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_config.erl: Added possibility for appending values
+	to config options (thanks to Badlop)
+	* doc/guide.tex: Updated
+
 2007-07-30  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/xml.erl: Better escaping management with CDATA. We only add
